--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "gatsby": "^4.8.0",
+    "gatsby-plugin-image": "^2.8.1",
+    "gatsby-plugin-sharp": "^4.8.1",
+    "gatsby-source-filesystem": "^4.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
