--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.8.0",
-    "gatsby-plugin-image": "^2.8.1",
-    "gatsby-plugin-sharp": "^4.8.1",
-    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-plugin-image": "^2.10.0",
+    "gatsby-plugin-mdx": "^3.10.1",
+    "gatsby-plugin-sharp": "^4.10.1",
+    "gatsby-source-filesystem": "^4.10.0",
+    "gatsby-source-wordpress": "^6.10.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
